--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,9 @@
         "framework",
         "web"
     ],
-    "homepage": "http://concisecss.com"
+    "homepage": "http://concisecss.com",
+    "main": [
+        "dist/css/concise.css",
+        "dist/js/concise.js"
+    ]
 }
